# massive_db_loader

./: .gitignore  README.md  compose.yml  example.env  mapping.toml  mapping.yml  mapping_schema.json  pyproject.toml
.github/workflows/: lint.yml  test.yml
mdbl/: cli.py
schemas/basic_data_load/: det.sql  object.sql
src/mdbl/: __main__.py  cli.py  mdbl.py  utils.py
src/mdbl/models/: cli.py  mappings.py
tests/: test_parse_config.py
